# Rust-Polarimeter

./: .gitignore  Cargo.toml  README.md  a  a.py  build.rs  bundler.py  package_macos.sh
.github/workflows/: build.yml  buildmac.yml
exposure/arduino.avr.uno/: sketch_sep15a.ino.elf  sketch_sep15a.ino.hex  sketch_sep15a.ino.with_bootloader.hex
exposure/调节曝光（Mac）.app/Contents/: CodeResources  Info.plist
exposure/调节曝光（Mac）.app/Contents/MacOS/: CameraController
exposure/调节曝光（Mac）.app/Contents/Resources/: AppIcon.icns  Assets.car
exposure/调节曝光（Mac）.app/Contents/Resources/Base.lproj/Main.storyboardc/: MainMenu.nib
exposure/调节曝光（Mac）.app/Contents/Resources/CameraController.momd/: VersionInfo.plist
exposure/调节曝光（Mac）.app/Contents/_CodeSignature/: CodeResources
icons/: ccme.icns
src/: a  app.rs  app2.rs  backend1.rs  communication.rs  logging.rs  main.rs
src/backend/: camera.rs  command.rs  data.rs  measurement.rs  mod.rs  model.rs  recording.rs  serial.rs
